--- a/HW9/Base.lproj/Main.storyboard
+++ b/HW9/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16095" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16095" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lof-rI-AnF">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16084.1"/>
@@ -91,16 +91,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="400" text="Label text text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmo-sn-pRl">
-                                <rect key="frame" x="324.66666666666669" y="357" width="81.333333333333314" height="20.333333333333314"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label text 156756678j.jk. jkljkl6hbgj7875723 555 text text text 454545" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmo-sn-pRl">
+                                <rect key="frame" x="296" y="357" width="110" height="21"/>
                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="EG5-UR-FVN"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label text text text text text text text text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSq-yB-nL9">
-                                <rect key="frame" x="8" y="358" width="308.66666666666669" height="20.333333333333314"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="400" misplaced="YES" text="Label text text text text text2" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSq-yB-nL9">
+                                <rect key="frame" x="8" y="358" width="219" height="21"/>
                                 <color key="backgroundColor" red="0.058299011499999998" green="1" blue="0.01099159527" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" priority="900" constant="280" id="D9U-rt-9Kv"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -112,7 +118,7 @@
                             <constraint firstItem="MSq-yB-nL9" firstAttribute="top" secondItem="E2d-ev-9UL" secondAttribute="top" constant="358" id="PJZ-dT-fGV"/>
                             <constraint firstItem="dmo-sn-pRl" firstAttribute="top" secondItem="E2d-ev-9UL" secondAttribute="top" constant="357" id="brq-NP-DbY"/>
                             <constraint firstItem="MSq-yB-nL9" firstAttribute="leading" secondItem="E2d-ev-9UL" secondAttribute="leading" constant="8" id="n35-lw-2kb"/>
-                            <constraint firstItem="dmo-sn-pRl" firstAttribute="leading" secondItem="MSq-yB-nL9" secondAttribute="trailing" constant="8" id="qZA-Ax-eRJ"/>
+                            <constraint firstItem="dmo-sn-pRl" firstAttribute="leading" secondItem="MSq-yB-nL9" secondAttribute="trailing" priority="900" constant="8" id="qZA-Ax-eRJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E2d-ev-9UL"/>
                     </view>
@@ -182,14 +188,14 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMW-el-4WJ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMW-el-4WJ">
                                 <rect key="frame" x="8" y="292" width="398" height="123"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uv9-GU-GLI">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uv9-GU-GLI">
                                 <rect key="frame" x="8" y="419" width="398" height="123"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
@@ -198,19 +204,17 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="eMW-el-4WJ" firstAttribute="top" secondItem="3Q6-cp-La9" secondAttribute="bottom" constant="4" id="IeY-gx-Mcr"/>
+                            <constraint firstItem="uv9-GU-GLI" firstAttribute="height" secondItem="eMW-el-4WJ" secondAttribute="height" id="Itp-gI-5xD"/>
                             <constraint firstItem="uv9-GU-GLI" firstAttribute="leading" secondItem="7nG-yl-LBl" secondAttribute="leading" constant="8" id="Jcc-R3-PUK"/>
-                            <constraint firstItem="uv9-GU-GLI" firstAttribute="height" secondItem="eMW-el-4WJ" secondAttribute="height" multiplier="0.243902" id="KaH-zW-GFJ"/>
                             <constraint firstItem="3Q6-cp-La9" firstAttribute="centerX" secondItem="zzk-oz-3FJ" secondAttribute="centerX" id="S9d-qa-e0I"/>
                             <constraint firstItem="7nG-yl-LBl" firstAttribute="trailing" secondItem="eMW-el-4WJ" secondAttribute="trailing" constant="8" id="VOO-0M-EOp"/>
-                            <constraint firstItem="uv9-GU-GLI" firstAttribute="height" secondItem="eMW-el-4WJ" secondAttribute="height" multiplier="0.243902" id="YGa-7N-Xzo"/>
                             <constraint firstItem="3Q6-cp-La9" firstAttribute="leading" secondItem="7nG-yl-LBl" secondAttribute="leading" constant="8" id="Zo9-Xx-Rtx"/>
                             <constraint firstItem="7nG-yl-LBl" firstAttribute="trailing" secondItem="uv9-GU-GLI" secondAttribute="trailing" constant="8" id="c54-hL-cgU"/>
                             <constraint firstItem="eMW-el-4WJ" firstAttribute="leading" secondItem="7nG-yl-LBl" secondAttribute="leading" constant="8" id="cP8-6l-odP"/>
                             <constraint firstItem="uv9-GU-GLI" firstAttribute="top" secondItem="eMW-el-4WJ" secondAttribute="bottom" constant="4" id="fBi-Lu-dnz"/>
                             <constraint firstItem="3Q6-cp-La9" firstAttribute="top" secondItem="7nG-yl-LBl" secondAttribute="top" constant="165" id="hq9-CN-OmI"/>
-                            <constraint firstItem="eMW-el-4WJ" firstAttribute="height" secondItem="3Q6-cp-La9" secondAttribute="height" multiplier="0.243902" id="qZw-gV-eas"/>
-                            <constraint firstItem="eMW-el-4WJ" firstAttribute="centerX" secondItem="zzk-oz-3FJ" secondAttribute="centerX" id="qvz-NH-1yf"/>
                             <constraint firstItem="uv9-GU-GLI" firstAttribute="centerX" secondItem="zzk-oz-3FJ" secondAttribute="centerX" id="u89-GN-Idh"/>
+                            <constraint firstItem="eMW-el-4WJ" firstAttribute="height" secondItem="3Q6-cp-La9" secondAttribute="height" id="uk4-ha-1lA"/>
                             <constraint firstItem="7nG-yl-LBl" firstAttribute="trailing" secondItem="3Q6-cp-La9" secondAttribute="trailing" constant="8" id="xj5-Fc-9vh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7nG-yl-LBl"/>
